@@ -63,6 +63,7 @@ Changes since Asterisk 1.4-beta was branched:
   * Added the trunkmaxsize configuration option to chan_iax2.
   * Added G729 passthrough support to chan_phone for Sigma Designs boards.
   * Added the parkedcalltransfers option to features.conf
+  * Added 's' option to Page application.
 
 SIP changes
 -----------
